fix: cover img overflowing

--- a/frontend/src/app/components/Main/App.css
+++ b/frontend/src/app/components/Main/App.css
@@ -35,6 +35,7 @@ body {
 }
 
 img {
+  object-fit: contain;
   max-width: 100%;
   height: auto;
   display: block;
@@ -67,8 +68,12 @@ li.book {
 }
 
 .book .cover img {
-  flex: 0 0 80%;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: cover;
+  display: block;
 }
 
 .book .details {
